PR25265: fix strict-prototypes nit autoconf-stack-trace-save-regs.c